--- a/100_doors/index.html
+++ b/100_doors/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>100 Doors Problem</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>100 Doors Problem</h1>
+  <button id="runBtn">Run Simulation</button>
+  <div id="output"></div>
+
+  <script src="main.js"></script>
+</body>
+</html>
 
